# VQLForge

./: .env  .gitignore  .gitmodules  LICENSE  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.yml  package-lock.json  package.json  readme.md  template.env
.github/workflows/: docker-publish.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  vdb_conf.yaml
backend/src/: config.py  main.py
backend/src/api/: forge.py  health.py  log_recorder.py  router.py  translate.py  validate.py  vdb_list.py
backend/src/db/: session.py  sqlite_session.py
backend/src/schemas/: agent.py  common.py  db_log.py  translation.py  validation.py
backend/src/services/: translation_service.py  validation_service.py
backend/src/utils/: ai_analyzer.py  denodo_client.py  dual_transformer.py  logging_config.py  vdb_transformer.py
frontend/: .dockerignore  Dockerfile  entrypoint-wrapper.sh  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: AiErrorAnalysis.js  AiValidationErrorAnalysis.js  App.js  Logo.js  apiService.js  index.js  theme.js
frontend/src/components/: AgenticLogDisplay.js  AgenticStatusDisplay.js  CustomSelect.js
frontend/src/components/Alerts/: AiErrorAnalysis.js  AiValidationErrorAnalysis.js  ValidationSuccessAlert.js
frontend/src/components/Dialogs/: ConfirmationDialog.js
frontend/src/components/Editors/: CodeEditor.js
frontend/src/components/Toast/: Toast.js
