[project]
name = "vqlforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "denodo-sqlalchemy[standard]>=2.0.4",
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
include = [
    "main.py",
]
