[project]
name = "vqlforge"
version = "0.1.0"
description = "VQLForge Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "denodo-sqlalchemy[standard]>=2.0.4",
    "devtools>=0.12.2",
    "fastapi[standard]>=0.115.12",
    "pydantic-ai>=0.1.3",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
    "sqlglot @ file:///app/sqlglot-vql"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src"] 
[tool.hatch.metadata]
allow-direct-references = true