[project]
name = "vqlforge"
version = "0.1.5"
description = "VQLForge Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "denodo-sqlalchemy[standard]>=2.0.4",
    "devtools>=0.12.2",
    "fastapi[standard]>=0.115.12",
    "pydantic-ai>=0.1.3",
    "sqlalchemy>=2.0.40",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.34.0",
    "sqlglot @ file:///app/sqlglot-vql"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-fastapi-client>=0.6.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src"] 
[tool.hatch.metadata]
allow-direct-references = true